add getCardDataInformation
